# istatserverlinux

./: .gitignore  COPYING  Makefile.am  README  autogen  configure.ac  get-istatserver.sh  readme.md
conf/: Makefile.am  main.cpp
resource/: Makefile.am  istatserver.1  istatserver.conf  istatserver.conf.5  istatserver_generated.conf
resource/firewalld/service/: istatserver.xml
resource/rc.d/: istatserver
resource/systemd/: istatserver.service
resource/upstart/: istatserver.conf
src/: Argument.cpp  Argument.h  Avahi.cpp  Avahi.h  Certificate.cpp  Certificate.h  Clientset.cpp  Clientset.h  Conf.cpp  Conf.h  Daemon.cpp  Daemon.h  Database.cpp  Database.h  Makefile.am  Responses.cpp  Responses.h  Socket.cpp  Socket.h  Socketset.cpp  Socketset.h  Stats.cpp  Stats.h  System.h  Utility.cpp  Utility.h  main.cpp  main.h
src/stats/: StatBase.cpp  StatBase.h  StatsActivity.cpp  StatsActivity.h  StatsBattery.cpp  StatsBattery.h  StatsCPU.cpp  StatsCPU.h  StatsDisks.cpp  StatsDisks.h  StatsLoad.cpp  StatsLoad.h  StatsMemory.cpp  StatsMemory.h  StatsNetwork.cpp  StatsNetwork.h  StatsProcesses.cpp  StatsProcesses.h  StatsSensors.cpp  StatsSensors.h  StatsUptime.cpp  StatsUptime.h
