SUBDIRS = 

bin_PROGRAMS = istatserver

istatserver_SOURCES = \
	./main.h ./main.cpp \
	./Conf.h ./Conf.cpp \
	./Avahi.h ./Avahi.cpp \
	./Argument.h ./Argument.cpp \
	./Socket.h ./Socket.cpp \
	./Clientset.h ./Clientset.cpp \
	./Responses.h ./Responses.cpp \
	./Daemon.h ./Daemon.cpp \
	./Stats.h ./Stats.cpp \
	./Socketset.h ./Socketset.cpp \
	./Utility.h ./Utility.cpp \
	./Certificate.h ./Certificate.cpp \
	./Database.h ./Database.cpp \
	./stats/StatBase.h ./stats/StatBase.cpp\
	./stats/StatsCPU.h ./stats/StatsCPU.cpp\
	./stats/StatsMemory.h ./stats/StatsMemory.cpp\
	./stats/StatsSensors.h ./stats/StatsSensors.cpp\
	./stats/StatsLoad.h ./stats/StatsLoad.cpp\
	./stats/StatsNetwork.h ./stats/StatsNetwork.cpp\
	./stats/StatsDisks.h ./stats/StatsDisks.cpp\
	./stats/StatsUptime.h ./stats/StatsUptime.cpp\
	./stats/StatsActivity.h ./stats/StatsActivity.cpp\
	./stats/StatsBattery.h ./stats/StatsBattery.cpp\
	./stats/StatsProcesses.h ./stats/StatsProcesses.cpp\
	System.h
